--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,8 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TPoops</title>
-
+  
   <!-- Bring in all stylesheets -->
   <link rel="stylesheet" href="/css/reset.css" />
   <link rel="icon" type="image/x-icon"
@@ -16,6 +15,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" /> 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Allerta+Stencil&family=El+Messiri:wght@400;500;600&family=Kurale&family=Marcellus&family=Orbitron:wght@400;500;600;700;800;900&family=Rancho&display=swap" />
   <link rel="stylesheet" href="/css/style.css" />
+  <title>TPoops</title>
 </head>
 
 <body>
@@ -23,9 +23,9 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="/js/home.js" type="text/javascript"></script>
   <script src="/js/login.js" type="text/javascript"></script>
   <script src="/js/signup.js" type="text/javascript"></script>
-  <script src="/js/members.js" type="text/javascript"></script>
 </body>
 
 </html>
