--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,7 +11,7 @@ footer {
   bottom: 0;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 600;
-  height: 10vh;
+  height: 8px;
   position: fixed;
   padding-top: 25px;
   text-align: center;
@@ -33,6 +33,7 @@ h2 {
 h3 {
   font-family: 'Orbitron', sans-serif;
   font-size: 40px;
+  margin-top: 160px;
   margin-left: 12px;
 }
 
