--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -7,7 +7,7 @@
         <li><a href="home">Home</a></li>
     </ul>
     <ul class="right hide-on-med-and-down">
-        <li><a href="TBD">Logout</a></li>
+        <li><a href="login">Logout</a></li>
     </ul>
     </div>
 </nav>
