--- a/views/input.handlebars
+++ b/views/input.handlebars
@@ -7,24 +7,24 @@
 
     <form action='/api/test' method='post' class="Found">
 
-      <div class="form-group col">
-        <label for="store">Store</label>
-        <input type="text" class="form-control" id="store-input" name='store' placeholder="Enter Store Name Here" />
+      <div class="input-field col">
+        <label for="store">Store</label><br>
+        <input type="text" class="validate" id="store-input" name='store' placeholder="Enter Store Name Here" />
       </div>
 
-      <div class="form-group col">
-        <label for="city">City</label>
-        <input type="text" class="form-control" id="city-input" name='city' placeholder="Enter City Here" />
+      <div class="input-field col">
+        <label for="city">City</label><br>
+        <input type="text" class="validate" id="city-input" name='city' placeholder="Enter City Here" />
       </div>
 
-      <div class="form-group col">
-        <label for="state">State</label>
-        <input type="text" class="form-control" id="state-input" name='state' placeholder="Select State From Dropdown" />
+      <div class="input-field col">
+        <label for="state">State</label><br>
+        <input type="text" class="validate" id="state-input" name='state' placeholder="Select State From Dropdown" />
       </div>
       
-      <div class="form-group col">
-        <label for="zipCode">Zip Code</label>
-        <input type="text" class="form-control" id="zip-code-input" name='zip' placeholder="Enter Zip Code Here" />
+      <div class="input-field col">
+        <label for="zipCode">Zip Code</label><br>
+        <input type="text" class="validate" id="zip-code-input" name='zip' placeholder="Enter Zip Code Here" />
       </div>
 
       <div style="display: none" id="alert" class="alert alert-danger" role="alert" >
