--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,13 +1,21 @@
 <nav>
     <div class="nav-wrapper">
-    <a href="#!" class="brand-logo center"><img src="./img/final-tp-poops.png" alt="logoTP" width="125" height="125"></a>
-    <ul class="left hide-on-med-and-down">
+      <a href="#!" class="brand-logo center"><img src="./img/final-tp-poops.png" alt="logoTP" width="125" height="125"></a>
+      <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+      <ul class="left hide-on-med-and-down">
         <li><a href="login">Login</a></li>
-        <li class="active"><a href="signup">Sign Up</a></li>
+        <li><a href="signup">Sign Up</a></li>
         <li><a href="home">Home</a></li>
-    </ul>
-    <ul class="right hide-on-med-and-down">
+      </ul>
+	<ul class="right hide-on-med-and-down">
         <li><a href="login">Logout</a></li>
     </ul>
     </div>
-</nav>
+  </nav>
+
+  <ul class="sidenav" id="mobile-demo">
+     <li><a href="login">Login</a></li>
+        <li><a href="signup">Sign Up</a></li>
+        <li><a href="home">Home</a></li>
+	<li><a href="login">Logout</a></li>
+  </ul>
