--- a/public/css/style.css
+++ b/public/css/style.css
@@ -155,7 +155,7 @@ nav {
   box-shadow: 0px 0px 2px silver;
   height: 8vh;
   margin: 8px 0;
-  padding-left: 10px 0 0 0;
+  padding-left: 12px;
   width: 70vw;
 }
 
