changing classes to materialize

--- a/views/input.handlebars
+++ b/views/input.handlebars
@@ -5,26 +5,26 @@
   <div class="col left">
     <h3>Found TP Here</h3>
 
-    <form action='/api/test' method='post' class="Found">
+    <form action='/api/items' method='post' class="input">
 
       <div class="input-field col">
         <label for="store">Store</label><br>
-        <input type="text" class="validate" id="store-input" name='store' placeholder="Enter Store Name Here" />
+        <input id="store-input" type="text" class="validate" name="store" placeholder="Enter Store Name Here" />
       </div>
 
       <div class="input-field col">
         <label for="city">City</label><br>
-        <input type="text" class="validate" id="city-input" name='city' placeholder="Enter City Here" />
+        <input id="city-input" type="text" class="validate" name="city" placeholder="Enter City Here" />
       </div>
 
       <div class="input-field col">
         <label for="state">State</label><br>
-        <input type="text" class="validate" id="state-input" name='state' placeholder="Select State From Dropdown" />
+        <input id="state-input" type="text" class="validate" name="state" placeholder="Select State From Dropdown" />
       </div>
       
       <div class="input-field col">
         <label for="zipCode">Zip Code</label><br>
-        <input type="text" class="validate" id="zip-code-input" name='zip' placeholder="Enter Zip Code Here" />
+        <input id="zip-code-input" type="text" class="validate" name="zipcode" placeholder="Enter Zip Code Here" />
       </div>
 
       <div style="display: none" id="alert" class="alert alert-danger" role="alert" >
