--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,6 @@
 /*        Global        */
 /************************/
 body {
-  /* background-image: linear-gradient(azure) */
   background-image: linear-gradient(to right, white, #B3B3B3)
 }
 
@@ -26,15 +25,14 @@ form.login {
 h2 {
   font-family: 'Orbitron', sans-serif;
   font-size: 40px;
-  margin-top: 160px;
+  margin-top: 150px;
   text-align: center;
 }
 
 h3 {
   font-family: 'Orbitron', sans-serif;
   font-size: 40px;
-  margin-top: 160px;
-  margin-left: 12px;
+  margin: 150px 0 16px 12px;
 }
 
 img {
@@ -45,7 +43,6 @@ label {
   color: #333;
   font-family: 'Orbitron', sans-serif;
   font-size: 15px;
-  margin: 10px 0;
 }
 
 nav {
@@ -68,7 +65,7 @@ nav {
   font-size: 1.5rem;
   font-weight: 700;
   justify-content: center;
-  margin: 2rem 2rem 2rem .75rem;
+  margin: 20px 20px 20px 12px;
   padding: 0.6666rem;
   text-align: center;
   text-shadow: -1px 0 #2b213b, 0 2px #333, 1px 0 #333, 0 -1px #333;
@@ -93,22 +90,18 @@ nav {
 }
 
 .input-field {
-  margin-bottom: 5px;
+  display:inline-flex;
+  margin-top: 5px;
 }
 
-.input-field > label {
-  /* font-family: Arial, Helvetica, sans-serif; */
+.input-field label {
   color: #2b213b;
-  font-size: 20px;
-  margin: 5px 0 0 0;
+  font-size: 17px;
+  margin: 0;
 }
 
 .nav-wrapper.a {
   padding: 0 20px;
-}
-
-.validate {
-  padding: 0;
 }
 
 /************************/
@@ -155,7 +148,7 @@ nav {
   box-shadow: 0px 0px 2px silver;
   height: 8vh;
   margin: 8px 0;
-  padding-left: 12px;
+  padding-left: 10px;
   width: 70vw;
 }
 
@@ -190,4 +183,3 @@ card-text[disabled]:hover {
 /************************/
 /*        @Media        */
 /************************/
-
