--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -7,14 +7,15 @@
 
       <form class="login">
 
-        <div class="form-group col">
-          <label for="loginEmail">eMail Address</label>
-          <input type="email" class="form-control" id="email-input" placeholder="Enter eMail Address Here" />
+        <div class="input-field col">
+          <label for="loginEmail">Email Address</label><br>
+          <input id="email-input" type="email" class="validate" name="email" placeholder="Enter Email Address Here" />
+          <span class="helper-text" data-error="wrong" data-success="right"></span>
         </div>
         
-        <div class="form-group col">
-          <label for="loginPassword">Password</label>
-          <input type="password" class="form-control" id="password-input" placeholder="Enter Password Here" />
+        <div class="input-field col">
+          <label for="loginPassword">Password</label><br>
+          <input id="password-input" type="password" class="validate" name="password" placeholder="Enter Password Here" />
         </div>
 
         <div style="display: none" id="alert" class="alert alert-danger" role="alert">
