--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,7 @@
 /*        Global        */
 /************************/
 body {
-  background-image: linear-gradient(to right, white, #B3B3B3)
+  background-color: whitesmoke;
 }
 
 footer {
@@ -145,6 +145,7 @@ nav {
   background-image: linear-gradient(white, lightgray);
   border-color: white 5px;
   border-radius: 10px;
+  border-style: inset;
   box-shadow: 0px 0px 2px silver;
   height: 8vh;
   margin: 8px 0;
