fixed code for input into table

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,7 +12,7 @@
     <div id="left-card" class="card">
       <div class="card-content white-text">
         <i id="fa" class="fas fa-users"></i>
-        <span class="card-title">Card Title</span>
+        <span class="card-title">Login / Logout</span>
         <p>I am a very simple card. I am good at containing small bits of information.
         I am convenient because I require little markup to use effectively.</p>
       </div>
@@ -27,7 +27,7 @@
     <div id="middle-card" class="card">
       <div class="card-content white-text">
         <i id="fa" class="fas fa-search"></i>
-        <span class="card-title">Card Title</span>
+        <span class="card-title">Location of TP</span>
         <p>I am a very simple card. I am good at containing small bits of information.
         I am convenient because I require little markup to use effectively.</p>
       </div>
@@ -41,12 +41,12 @@
     <div id="right-card" class="card">
       <div class="card-content white-text">
         <i id="fa" class="far fa-keyboard"></i>
-        <span class="card-title">Card Title</span>
+        <span class="card-title">In search of TP</span>
         <p>I am a very simple card. I am good at containing small bits of information.
         I am convenient because I require little markup to use effectively.</p>      
       </div>
       <div class="card-action">
-        <a id="card-text" href="#">ISO</a>
+        <a id="card-text" href="/search">ISO</a>
       </div>
     </div>
   </div>         
