--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,7 @@
 /*        Global        */
 /************************/
 body {
-  background-color: whitesmoke;
+  background-image: linear-gradient(to right, #B3B3B3, white, #B3B3B3)
 }
 
 footer {
@@ -17,10 +17,10 @@ footer {
   width: 100vw;
 }
 
-form.signup,
+/* form.signup,
 form.login {
   margin-top: 50px;
-}
+} */
 
 h2 {
   font-family: 'Orbitron', sans-serif;
@@ -47,7 +47,7 @@ label {
 
 nav {
   background-image: linear-gradient(to right, #3D3320, #8A7D63, #B3B3B3, #B0C0D6, #63738A, #26303D);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Orbitron', sans-serif;
   position: fixed;
   text-shadow: 2px 0px 2px 0px;
   top: 0;
@@ -100,8 +100,15 @@ nav {
   margin: 0;
 }
 
+
 .nav-wrapper.a {
   padding: 0 20px;
+}
+
+.sidenav {
+  background-color: whitesmoke;
+  color: black;
+  font-family: 'Orbitron', sans-serif;
 }
 
 /************************/
