--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,6 +20,8 @@
   <link rel="stylesheet" href="css/theme.materialize.css">
   <link rel="stylesheet" href="/css/style.css" />
  
+ <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+ 
   <title>TPoops</title>
 </head>
 
@@ -28,7 +30,7 @@
   {{{ body }}}
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  {{!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script> --}}
   <script scr="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
   <script src="js/jquery.tablesorter.widgets.js"></script>
   <script src="js/jquery.tablesorter.pager.js"></script>
