--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -2,20 +2,16 @@
     <div class="nav-wrapper">
       <a href="#!" class="brand-logo center"><img src="./img/final-tp-poops.png" alt="logoTP" width="125" height="125"></a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-      <ul class="left hide-on-med-and-down">
-        <li><a href="login">Login</a></li>
-        <li><a href="signup">Sign Up</a></li>
-        <li><a href="home">Home</a></li>
-      </ul>
-	<ul class="right hide-on-med-and-down">
-        <li><a href="login">Logout</a></li>
+    <ul class="left hide-on-med-and-down">
+      <li><a href="index">Home</a></li>
+      <li><a href="input">Location</a></li>
+      <li><a href="search">ISO</a></li>
     </ul>
-    </div>
-  </nav>
+  </div>
+</nav>
 
-  <ul class="sidenav" id="mobile-demo">
-     <li><a href="login">Login</a></li>
-        <li><a href="signup">Sign Up</a></li>
-        <li><a href="home">Home</a></li>
-	<li><a href="login">Logout</a></li>
+    <ul class="sidenav" id="mobile-demo">
+     <li><a href="index">Home</a></li>
+     <li><a href="input">Location</a></li>
+     <li><a href="search">ISO</a></li>
   </ul>
