started on making the table

--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -16,7 +16,7 @@
       <select class="gotoPage" title="Select page number"></select>
     </div>
 
-    <table id="itemTable" class="tablesorter">
+    <table id="myTable" class="display" style="width: 100%;">
 
       <thead>
         <tr>
@@ -37,16 +37,6 @@
         </tr>
         {{/each}}
       </tbody>
-
-      <tfoot>
-        <tr>
-          <th>Store</th>
-          <th>City</th>
-          <th>State</th>
-          <th>ZipCode</th>
-        </tr>
-      </tfoot>
-
     </table>
 
     <div class="pager"> 
