--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -3,7 +3,7 @@
       <a href="#!" class="brand-logo center"><img src="./img/final-tp-poops.png" alt="logoTP" width="125" height="125"></a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     <ul class="left hide-on-med-and-down">
-      <li><a href="index">Home</a></li>
+      <li><a href="/">Home</a></li>
       <li><a href="input">Location</a></li>
       <li><a href="search">ISO</a></li>
     </ul>
@@ -11,7 +11,7 @@
 </nav>
 
     <ul class="sidenav" id="mobile-demo">
-     <li><a href="index">Home</a></li>
+     <li><a href="/">Home</a></li>
      <li><a href="input">Location</a></li>
      <li><a href="search">ISO</a></li>
   </ul>
