changed the state placeholder

--- a/views/input.handlebars
+++ b/views/input.handlebars
@@ -19,7 +19,7 @@
 
       <div class="input-field col">
         <label for="state">State</label><br>
-        <input id="state-input" type="text" class="validate" name="state" placeholder="Select State From Dropdown" />
+        <input id="state-input" type="text" class="validate" name="state" placeholder="Enter State Here" />
       </div>
       
       <div class="input-field col">
