got the table to work

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,7 +14,7 @@
         <i id="fa" class="fas fa-search"></i>
         <span class="card-title">Location of TP</span>
         <p>I am a very simple card. I am good at containing small bits of information.
-        I am convenient because I require little markup to use effectively.</p>
+          I am convenient because I require little markup to use effectively.</p>
       </div>
       <div class="card-action">
         <a id="card-text" href="/input">Input</a>
@@ -28,13 +28,15 @@
         <i id="fa" class="far fa-keyboard"></i>
         <span class="card-title">In search of TP</span>
         <p>I am a very simple card. I am good at containing small bits of information.
-        I am convenient because I require little markup to use effectively.</p>      
+          I am convenient because I require little markup to use effectively.</p>
       </div>
       <div class="card-action">
         <a id="card-text" href="/search">ISO</a>
       </div>
     </div>
-  </div>         
+  </div>
 </div>
 
 {{>footer}}
+
+<script src="/js/home.js" type="text/javascript"></script>
