--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,10 +12,11 @@
           <input id="email-input" type="email" class="validate" name="email" placeholder="Enter Email Address Here" />
           <span class="helper-text" data-error="wrong" data-success="right"></span>
         </div>
-        
+
         <div class="input-field col">
           <label for="loginPassword">Password</label><br>
-          <input id="password-input" type="password" class="validate" name="password" placeholder="Enter Password Here" />
+          <input id="password-input" type="password" class="validate" name="password"
+            placeholder="Enter Password Here" />
         </div>
 
         <div style="display: none" id="alert" class="alert alert-danger" role="alert">
@@ -25,9 +26,11 @@
 
         <button type="submit" class="btn col">Login</button>
       </form>
-      
+
     </div>
   </div>
 </div>
 
 {{>footer}}
+
+<script src="/js/login.js" type="text/javascript"></script>
