--- a/views/input.handlebars
+++ b/views/input.handlebars
@@ -2,41 +2,43 @@
 
 <div class="container">
   <div class="row">
-  <div class="col left">
-    <h3>Found TP Here</h3>
-    
-    <form action='/api/items' method='post' class="input">
+    <div class="col left">
+      <h3>Found TP Here</h3>
 
-      <div class="input-field col">
-        <label for="store">Store</label><br>
-        <input id="store-input" type="text" class="validate" name="store" placeholder="Enter Store Name Here" />
-      </div>
+      <form action='/api/items' method='post' class="input">
 
-      <div class="input-field col">
-        <label for="city">City</label><br>
-        <input id="city-input" type="text" class="validate" name="city" placeholder="Enter City Here" />
-      </div>
+        <div class="input-field col">
+          <label for="store">Store</label><br>
+          <input id="store-input" type="text" class="validate" name="store" placeholder="Enter Store Name Here" />
+        </div>
 
-      <div class="input-field col">
-        <label for="state">State</label><br>
-        <input id="state-input" type="text" class="validate" name="state" placeholder="Select State From Dropdown" />
-      </div>
-      
-      <div class="input-field col">
-        <label for="zipCode">Zip Code</label><br>
-        <input id="zip-code-input" type="text" class="validate" name="zipcode" placeholder="Enter Zip Code Here" />
-      </div>
+        <div class="input-field col">
+          <label for="city">City</label><br>
+          <input id="city-input" type="text" class="validate" name="city" placeholder="Enter City Here" />
+        </div>
 
-      <div style="display: none" id="alert" class="alert alert-danger" role="alert" >
-        <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-        <span class="sr-only">Error:</span> <span class="msg"></span>
-      </div>
+        <div class="input-field col">
+          <label for="state">State</label><br>
+          <input id="state-input" type="text" class="validate" name="state" placeholder="Select State From Dropdown" />
+        </div>
 
-    <button type="submit" class="btn col">Submit</button>
-    </form>
+        <div class="input-field col">
+          <label for="zipCode">Zip Code</label><br>
+          <input id="zip-code-input" type="text" class="validate" name="zipcode" placeholder="Enter Zip Code Here" />
+        </div>
 
-  </div>
+        <div style="display: none" id="alert" class="alert alert-danger" role="alert">
+          <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+          <span class="sr-only">Error:</span> <span class="msg"></span>
+        </div>
+
+        <button type="submit" class="btn col">Submit</button>
+      </form>
+
+    </div>
   </div>
 </div>
 
 {{>footer}}
+
+<script src="/js/input.js" type="text/javascript"></script>
