--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -15,7 +15,8 @@
 
         <div class="input-field col">
           <label for="signUpPassword">Password</label><br>
-          <input id="password-input" type="password" class="validate" name="password" placeholder="Enter Password Here" />
+          <input id="password-input" type="password" class="validate" name="password"
+            placeholder="Enter Password Here" />
         </div>
 
         <div style="display: none" id="alert" class="alert alert-danger" role="alert">
@@ -31,3 +32,5 @@
 </div>
 
 {{>footer}}
+
+<script src="/js/signup.js" type="text/javascript"></script>
