update home page cards

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -13,11 +13,10 @@
       <div class="card-content white-text">
         <i id="fa" class="fas fa-search"></i>
         <span class="card-title">Location of TP</span>
-        <p>I am a very simple card. I am good at containing small bits of information.
-        I am convenient because I require little markup to use effectively.</p>
+        <p>Enter location of TP that you have found to be in stock for other users.</p>
       </div>
       <div class="card-action">
-        <a id="card-text" href="/input">Input</a>
+        <a id="card-text" href="/input">Enter TP Stock</a>
       </div>
     </div>
   </div>
@@ -27,11 +26,10 @@
       <div class="card-content white-text">
         <i id="fa" class="far fa-keyboard"></i>
         <span class="card-title">In search of TP</span>
-        <p>I am a very simple card. I am good at containing small bits of information.
-        I am convenient because I require little markup to use effectively.</p>      
+        <p>Click here to find the location and stock of TP closest to your location .</p>      
       </div>
       <div class="card-action">
-        <a id="card-text" href="/search">ISO</a>
+        <a id="card-text" href="/search">In Search Of</a>
       </div>
     </div>
   </div>         
