--- a/views/input.handlebars
+++ b/views/input.handlebars
@@ -1,44 +1,34 @@
- {{>navbar}}
 
+{{>navbar}}
 <div class="container">
   <div class="row">
     <div class="col left">
       <h3>Found TP Here</h3>
-
-      <form action='/api/items' method='post' class="input">
-
+      <form  class="input">
         <div class="input-field col">
           <label for="store">Store</label><br>
           <input id="store-input" type="text" class="validate" onkeyup="checkText()" name="store" placeholder="Enter Store Name Here" />
         </div>
-
         <div class="input-field col">
           <label for="city">City</label><br>
           <input id="city-input" type="text" class="validate" onkeyup="checkText()" name="city" placeholder="Enter City Here" />
         </div>
-
         <div class="input-field col">
           <label for="state">State</label><br>
           <input id="state-input" type="text" class="validate" onkeyup="checkText()" name="state" placeholder="Enter State Here" />
         </div>
-
         <div class="input-field col">
           <label for="zipCode">Zip Code</label><br>
-          <input id="zip-code-input" type="text" class="validate" onkeyup="checkText()" name="zipcode" placeholder="Enter Zip Code Here" />
+          <input id="zip-code-input" type="number" class="validate" onkeyup="checkText()" name="zipcode" placeholder="Enter Zip Code Here" pattern="[0-9]*" />
         </div>
-
         <div style="display: none" id="alert" class="alert alert-danger" role="alert" >
           <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
           <span class="sr-only">Error:</span> <span class="msg"></span>
         </div>
-
       <button type="submit" disabled id="submit-btn" class="btn col">Submit</button>
       </form>
-
     </div>
   </div>
 </div>
-
 {{>footer}}
-
 <script src="/js/input.js" type="text/javascript"></script>
