--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,19 +1,17 @@
+
 <nav>
   <div class="nav-wrapper">
     <a href="#!" class="brand-logo center"><img src="./img/final-tp-poops.png" alt="logoTP" width="125" height="125"></a>
     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-
     <ul class="left hide-on-med-and-down">
       <li><a href="/">Home</a></li>
-      <li><a href="input">Location</a></li>
-      <li><a href="search">ISO</a></li>
+      <li><a href="input">Enter</a></li>
+      <li><a href="search">Search</a></li>
     </ul>
-
   </div>
 </nav>
-
 <ul class="sidenav" id="mobile-demo">
   <li><a href="/">Home</a></li>
-  <li><a href="input">Location</a></li>
-  <li><a href="search">ISO</a></li>
+  <li><a href="input">Enter</a></li>
+  <li><a href="search">Search</a></li>
 </ul>
