--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -1,12 +1,10 @@
-{{>navbar}}
 
+{{>navbar}}
 <div class="container">
   <div class="row">
-    <div class="col left">
+    <div class="col s12 left">
       <h3>Search</h3>
-
       <table id="myTable" class="display" style="width: 100%;">
-
         <thead>
           <tr>
             <th>Store</th>
@@ -15,7 +13,6 @@
             <th>ZipCode</th>
           </tr>
         </thead>
-
         <tbody>
           {{#each items}}
           <tr>
@@ -30,7 +27,5 @@
     </div>
   </div>
 </div>
-
 {{>footer}}
-
 <script src="/js/search.js" type="text/javascript"></script>
