--- a/public/css/style.css
+++ b/public/css/style.css
@@ -157,6 +157,23 @@ nav {
   padding: 0;
 }
 
+#myTable_length > label > select {
+  background-color: white;
+  border-radius: 8px;
+}
+
+#myTable_filter > label > input {
+  background-color: white;
+  border-radius: 8px;
+  margin: 10px 0 10px 0;
+  height: 30px;
+  width: auto;
+}
+
+#myTable_wrapper {
+  border-radius: 15px;
+}
+
 #right-card {
   background: linear-gradient(to right, #B0C0D6, #63738A);
 }
@@ -213,14 +230,10 @@ card-text[disabled]:hover {
 
 [name="myTable_length"] {
   display: inline-block;
+  margin: 10px 0;
   padding: 10px 0;
-  margin: 15px 0;
-  float: left;
-}
-
-#text {
-  padding: 10px;
-  margin: 10px;
+  width: auto;
+  line-break:normal;
 }
 
 /************************/
