--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -1,10 +1,12 @@
-
 {{>navbar}}
+
 <div class="container">
   <div class="row">
     <div class="col s12 left">
       <h3>Search</h3>
+
       <table id="myTable" class="display" style="width: 100%;">
+
         <thead>
           <tr>
             <th>Store</th>
@@ -13,6 +15,7 @@
             <th>ZipCode</th>
           </tr>
         </thead>
+
         <tbody>
           {{#each items}}
           <tr>
@@ -24,8 +27,15 @@
           {{/each}}
         </tbody>
       </table>
+
+      <div><a id="submit-btn" type="submit" class="btn col" href="/input">Go Back</a></div>
+
     </div>
   </div>
 </div>
+
+
+
 {{>footer}}
+
 <script src="/js/search.js" type="text/javascript"></script>
