--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,9 +6,9 @@
   </div>
 </div>
 
-<div id="card-deck" class="row">
+<div class="row card-container">
 
-  <div id="card" class="col s12 m4">
+  <div id="card" class="col 13 s12 m3">
     <div id="middle-card" class="card">
       <div class="card-content white-text">
         <i id="fa" class="fas fa-search"></i>
@@ -21,7 +21,7 @@
     </div>
   </div>
 
-  <div id="card" class="col s12 m4">
+  <div id="card" class="col 13 s12 m3">
     <div id="right-card" class="card">
       <div class="card-content white-text">
         <i id="fa" class="far fa-keyboard"></i>
@@ -32,7 +32,8 @@
         <a id="card-text" href="/search">In Search Of</a>
       </div>
     </div>
-  </div>         
+  </div>
+
 </div>
 
 {{>footer}}
