--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -3,9 +3,9 @@
 <div class="container">
   <div class="row">
     <div class="col s12 left">
-      <h3>Search</h3>
+      <h3 id="search">Search</h3>
 
-      <table id="myTable" class="display" style="width: 100%;">
+      <table id="myTable" class="display" cellspacing="0" style="width: 100%;">
 
         <thead>
           <tr>
@@ -13,6 +13,7 @@
             <th>City</th>
             <th>State</th>
             <th>ZipCode</th>
+            {{!-- <th>Delete</th> --}}
           </tr>
         </thead>
 
@@ -23,9 +24,11 @@
             <td>{{dataValues.city}}</td>
             <td>{{dataValues.state}}</td>
             <td>{{dataValues.zipcode}}</td>
+            {{!-- <td id="delete-item"><a href class="editor_remove">Delete</a></td> --}}
           </tr>
           {{/each}}
         </tbody>
+
       </table>
 
       <div><a id="submit-btn" type="submit" class="btn col" href="/input">Go Back</a></div>
@@ -33,8 +36,6 @@
     </div>
   </div>
 </div>
-
-
 
 {{>footer}}
 
